# chainofthought

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: test.yml
backend/: pyproject.toml
backend/app/: main.py  pyproject.toml
backend/app/api/: thoughts.py
backend/app/crud/: thoughts.py
backend/app/db/: session.py
backend/app/models/: thought.py
backend/app/schemas/: thought.py  thoughts.sql
backend/tests/: conftest.py
backend/tests/test_api/: test_thoughts.py
backend/tests/test_crud/: test_thoughts.py
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.vue  style.css
frontend/src/components/: ThoughtEditor.vue  ThoughtForm.vue  ThoughtList.vue
frontend/src/layouts/: Layout.vue
frontend/src/router/: index.ts
frontend/src/types/: Thought.d.ts
frontend/src/views/: Daily.vue  Home.vue  Notes.vue  Orientation.vue  Thoughts.vue
src/views/: Home.vue
