[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "sqlalchemy>=2.0.38",
    "sqlmodel>=0.0.24",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]